--- a/package.json
+++ b/package.json
@@ -1,51 +1,35 @@
 {
-  "name": "myreactapp",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.3",
-    "@mui/styled-engine-sc": "^5.11.0",
-    "@paypal/react-paypal-js": "^7.8.2",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.1.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.4.2",
-    "react-scripts": "5.0.1",
-    "react-toastify": "^9.1.1",
-    "redux": "^4.2.0",
-    "redux-thunk": "^2.4.2",
-    "styled-components": "^5.3.6",
-    "web-vitals": "^2.1.4"
-  },
+  "name": "25jul",
+  "version": "1.0.0",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "nodemon --exec babel-node"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@babel/core": "^7.18.9",
+    "@babel/node": "^7.18.9",
+    "@babel/preset-env": "^7.18.9",
+    "@sendgrid/mail": "^7.7.0",
+    "babel-plugin-add-module-exports": "^1.0.4",
+    "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "mailtrap": "^3.0.1",
+    "mongoose": "^6.5.4",
+    "mongoose-unique-validator": "^3.1.0",
+    "nodemailer": "^6.8.0",
+    "pug": "^3.0.2",
+    "randomstring": "^1.2.2"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "description": ""
 }
